Updated 2.1.preview-0 schema based on TJ's feedback and renamed it to… (#5813)
* Updated 2.1.preview-0 schema based on TJ's feedback and renamed it to 2.1.preview-1.
Removed ID property from languageModel.
Changed Itents to be just an array of strings.
Updated sample schemas to use string types instead of time and date (that are not supported in json schema).

* update schema

* update schema manfifest to aloow all activity types

* keep oneOf definitions

* add otherActivites definition

* fleshed out otherActivities

* remove open ended

* remove import

* remove OnOf

* update enum

* add pattern to otherActivity

Co-authored-by: Tom Laird-McConnell <tomlm@microsoft.com>

--- a/schemas/skills/samples/complex-skillmanifest-2.0.0.json
+++ b/schemas/skills/samples/complex-skillmanifest-2.0.0.json
@@ -32,7 +32,7 @@
     ],
     "activities": {
         "bookFlight": {
-            "description": "Books a light",
+            "description": "Books a flight",
             "type": "event",
             "name": "BookFlight",
             "value": {
@@ -83,7 +83,7 @@
                     "description": "this is the destination city for the flight"
                 },
                 "date": {
-                    "type": "date",
+                    "type": "string",
                     "description": "The date for the flight in YYYY-MM-DD format"
                 }
             }
