--- a/schemas/skills/skill-manifest-2.1.preview-1.json
+++ b/schemas/skills/skill-manifest-2.1.preview-1.json
@@ -6,6 +6,7 @@
     "type": "object",
     "required": [
         "$id",
+        "$schema",
         "name",
         "version",
         "publisherName",
@@ -103,7 +104,7 @@
         },
         "activities": {
             "type": "object",
-            "description": "Definition of activities to enable skill host tooling to progmatically interact with the skill.",
+            "description": "Definition of activities to enable skill host tooling to programmatically interact with the skill.",
             "additionalProperties": {
                 "oneOf": [
                     {
