Skills manifest: Add readme & more complexity to the sample (#5831)
* Add readme & more complexity to the sample

--- a/schemas/skills/samples/complex-skillmanifest-2.1.preview-1.json
+++ b/schemas/skills/samples/complex-skillmanifest-2.1.preview-1.json
@@ -106,6 +106,12 @@
         "message": {
             "type": "message",
             "description": "Receives the user's' utterance and attempts to resolve it using the skill's LU models"
+        },
+        "typing": {
+            "type": "typing"
+        },
+        "conversationUpdate": {
+            "type": "conversationUpdate"
         }
     },
     "definitions": {
