--- a/schemas/skills/skill-manifest-2.1.preview-1.json
+++ b/schemas/skills/skill-manifest-2.1.preview-1.json
@@ -1,6 +1,7 @@
 {
     "$id": "https://schemas.botframework.com/schemas/skills/skill-manifest-2.1.preview-1.json",
     "$schema": "http://json-schema.org/draft-07/schema#",
+    "$version": "2.1.preview-1",
     "title": "Skill Manifest Schema (v2.1.preview-1)",
     "description": "A schema for Bot Framework skill manifests",
     "type": "object",
