--- a/schemas/skills/v2.0/samples/complex-skillmanifest.json
+++ b/schemas/skills/v2.0/samples/complex-skillmanifest.json
@@ -1,5 +1,5 @@
 {
-    "$schema": "https://schemas.botframework.com/schemas/skills/skill-manifest-2.0.0.json",
+    "$schema": "https://schemas.botframework.com/schemas/skills/v2.0/skill-manifest.json",
     "$id": "SkillBot",
     "name": "Sample skill definition that can handle multiple types of activities",
     "version": "1.0",
