refactor and enable maintainer message broadcast

--- a/dri/issueNotificationBot/Bot/IssueNotificationBot.csproj
+++ b/dri/issueNotificationBot/Bot/IssueNotificationBot.csproj
@@ -6,11 +6,12 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <NoWarn>RCS1090</NoWarn>
+    <NoWarn>NU1701, RCS1090</NoWarn>
+    <WarningsAsErrors>NU1605</WarningsAsErrors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <NoWarn>RCS1090</NoWarn>
+    <NoWarn>NU1701, RCS1090</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
