--- a/parsers/LU/CS/LUParser/Microsoft.Botframework.LUParser.csproj
+++ b/parsers/LU/CS/LUParser/Microsoft.Botframework.LUParser.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AssemblyName>Microsoft.Botframework.LUParser</AssemblyName>
     <RootNamespace>Microsoft.Botframework.LUParser</RootNamespace>
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Antlr4.Runtime.Standard" Version="4.8.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
