--- a/parsers/LU/CS/LUParser/Microsoft.Botframework.LUParser.csproj
+++ b/parsers/LU/CS/LUParser/Microsoft.Botframework.LUParser.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Antlr4.Runtime.Standard" Version="4.8.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
