Adding tests to LU parser

--- a/parsers/LU/CS/Microsoft.Botframework.LUParser.Tests/Microsoft.Botframework.LUParser.Tests.csproj
+++ b/parsers/LU/CS/Microsoft.Botframework.LUParser.Tests/Microsoft.Botframework.LUParser.Tests.csproj
@@ -15,8 +15,17 @@
 
   <ItemGroup>
     <Folder Include="parser\" />
+    <Folder Include="Fixtures\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LUParser\Microsoft.Botframework.LUParser.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="Fixtures\LU.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Fixtures\LU_Sections.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
