adding nuspec file

--- a/parsers/LU/CS/Package.nuspec
+++ b/parsers/LU/CS/Package.nuspec
@@ -2,19 +2,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
     <id>Microsoft.Bot.Framework.CSharp.Parser</id>
-    <version>4.10.2</version>
-    <description>
-      A parser for language understanding files. 
-    </description>
+    <version>1.0.0</version>
+    <description>A CSharp parser for Language Understanding files.</description>
     <authors>Microsoft</authors>
     <copyright>© Microsoft Corporation. All rights reserved.</copyright>
-    <title>LU Parser</title>
-    <projectUrl>https://github.com/Microsoft/BotFramework-SDK</projectUrl>
+    <title>CSharp LU Parser</title>
+    <projectUrl>https://github.com/Microsoft/botframework-sdk</projectUrl>
     <license type="file">LICENSE.txt</license>
     <icon>nuget_icon.png</icon>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <packageTypes>
-      <packageType name="Template" />
-    </packageTypes>
   </metadata>
 </package>
