Add outputpackages to dir.props

--- a/parsers/LU/CS/Directory.Build.props
+++ b/parsers/LU/CS/Directory.Build.props
@@ -1,4 +1,8 @@
 <Project>
+  <PropertyGroup>
+    <PackageOutputPath>$(MSBuildThisFileDirectory)outputpackages</PackageOutputPath>
+  </PropertyGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <AssemblyOriginatorKeyFile>$(SolutionDir)\..\..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
