--- a/parsers/LU/Directory.Build.props
+++ b/parsers/LU/Directory.Build.props
@@ -3,10 +3,11 @@
     <PackageOutputPath>$(MSBuildThisFileDirectory)outputpackages</PackageOutputPath>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <AssemblyOriginatorKeyFile>$(SolutionDir)\..\..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>$(SolutionDir)\..\..\build\35MSSharedLib1024.snk</AssemblyOriginatorKeyFile>
     <SignAssembly>true</SignAssembly>
     <DelaySign>true</DelaySign>
+    <Note> Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'"</Note>
   </PropertyGroup>
   
   <PropertyGroup>
